--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Serg10/Downloads/librerias-QR/core-3.4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Serg10/Downloads/librerias-QR/javase-3.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
